# nous-memoryAgentBench

./: .gitignore  BASELINE_SUMMARY.md  README.md  pyproject.toml
configs/: prod_baseline_2026-07-03.env  prod_memory.env  prod_memory_bigctx.env  prod_memory_budget33k.env  prod_memory_ce_on.env  prod_memory_exemplar.env  prod_memory_f053_spreadon.env  prod_memory_injection_fix.env  prod_memory_keyedleg.env  prod_memory_keyedleg_r2.env  prod_memory_spreading_on.env
docs/: RUNNING.md  nous-db-schema.md  nous-f085-gate1-fix-spec.md  nous-icl-exemplar-mode-requirements.md  nous-prod-deployment-plan-559-to-567.md  nous-prod-keyedleg-rollout.md  nous-r3-keyed-selection-requirements.md  nous-r3v2-iterative-keyed-requirements.md  nous-write-path-requirements.md
mab/: __init__.py  adapter.py  cli.py  config.py  diagnostics.py  instance.py  paper_prompts.py  paper_run.py  replay.py  report.py  runner.py  wipe.py
scripts/: judge_regrade.py  probe_ce_rerank_sim.py  probe_icl_exemplar_emb.py  probe_icl_exemplar_knn.py  probe_keyed_entity_sim.py  probe_keyed_lookup_sim.py  probe_query_dilution.py  provision_eval_db.sh  replay_ar_coverage.py  replay_cr_n320.py  replay_icl_n200.py  replay_paper_prompt.py  run_558_retest_detached.cmd  run_559_ab_detached.cmd  run_559on_detached.cmd  run_backfill_sh262k_detached.cmd  run_budget33k_detached.cmd  run_ce_sim_detached.cmd  run_ceon_detached.cmd  run_coverage_gate_detached.cmd  run_cr_rebaseline.sh  run_f053_cells_detached.cmd  run_f053_spreadon_detached.cmd  run_forcedrecall_detached.cmd  run_icl_exemplar_detached.cmd  run_paper_ar.py  (+10 more)
(+99 files in other folders)
