[project]
name = "nous-memory-agent-bench"
version = "0.1.0"
description = "MemoryAgentBench (MAB) benchmark harness for the nous agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",            # HTTP client for driving the nous server
    "pydantic>=2.7",          # schemas (MabInstance, results)
    "pydantic-settings>=2.3", # MAB_* env-driven harness config
    "huggingface-hub>=0.24",  # download the MAB dataset parquet files
    "pyarrow>=16",            # read MAB parquet files (no full `datasets` dep needed)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",            # mock httpx for adapter/settle unit tests
    "ruff>=0.5",
]

[project.scripts]
mab = "mab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: needs a live nous server + eval DB + API keys (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
